[package]
name = "newsgrep"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7.0"
scraper = "0.14.0"
async-trait = "0.1.60"

